--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<title>fraze finder</title>
 <link href='https://fonts.googleapis.com/css?family=Josefin+Slab:700|Lato|Ubuntu' rel='stylesheet' type='text/css'>
 <style>
 *, *::before, *::after {
